--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=261642392"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=262998367" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=350133273" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/K4FsTBzeXnMxZWWFLXWKAIgv4yzbH4K9wcrAUg3jBKqfeTtgfV7JE6bPHQI3wQJhF29tWDJaFRZy5Qg8jcm8jRI3wDZqjQwu5ew3jAFKjcIXZA4ReKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJejAs8deU8JymldhoXShmkScBXOABCiemkdcBXZWw7fbRaPyMMeMI6MKGHf5eqMyMgeMI6MqGIQWmDZZMg7H-vu39.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/6UZ-kEZsn0fMBL5CMQZBjAJPZiW9k27qVaXoqBDS6LXfeTtgfV7JE6bPHQI3wQJhF29tWDJaFRZy5Qg8jcm8jRI3wDZqjQwu5ew3jAFKjcIXZA4ReKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJejAs8deU8JymldhoXShmkScBXOABCiemkdcBXZWw7fbRaPyMMeMI6MKGHf5eqMyMgeMI6MqGIQWmDZZMgkO7vu39.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -40,7 +40,7 @@ $(window).load(function(){
 </script>
 
 <style>
-.js div#preloader { position: fixed; left: 0; top: 0; z-index: 999; width: 100%; height: 100%; overflow: visible; background: #FFFFFF url('assets/kill-shot0001.gif') no-repeat center center; }
+.js div#preloader { position: fixed; left: 0; top: 0; z-index: 999; width: 100%; height: 100%; overflow: visible; background: #FFFFFF url('assets/trial-killshot.gif') no-repeat center center; }
 </style>
 
  </head>
@@ -80,7 +80,7 @@ $(window).load(function(){
        <div class="clip_frame grpelem" id="u26913"><!-- image -->
         <img class="block" id="u26913_img" src="images/asset%20107%20(2)jarawa-crop-u26913.png?crc=4158004422" alt="" data-heightwidthratio="1.391304347826087" data-image-width="23" data-image-height="32"/>
        </div>
-       <div class="Style-3 rounded-corners grpelem" id="u26923" title="Ethnography"><!-- simple frame --></div>
+       <div class="Style-3 grpelem" id="u26923" title="Ethnography"><!-- simple frame --></div>
       </div>
      </div>
      <div class="popup_anchor allow_click_through colelem" data-col-pos="1" id="u25552popup">
@@ -101,12 +101,10 @@ $(window).load(function(){
      </div>
      <div class="popup_anchor allow_click_through colelem" data-col-pos="3" id="u26308popup">
       <div class="Thumb popup_element clearfix" data-col-pos="3" id="u26308"><!-- group -->
-       <div class="clearfix grpelem" id="u27194"><!-- group -->
-        <div class="clip_frame grpelem" id="u27083"><!-- image -->
-         <img class="block" id="u27083_img" src="images/asset%20107%20(2)jarawa-crop-u27083.png?crc=4158004422" alt="" data-heightwidthratio="1.391304347826087" data-image-width="23" data-image-height="32"/>
-        </div>
-        <div class="Style-3 rounded-corners grpelem" id="u27085" title="Ethnography"><!-- simple frame --></div>
+       <div class="clip_frame grpelem" id="u27083"><!-- image -->
+        <img class="block" id="u27083_img" src="images/asset%20107%20(2)jarawa-crop-u27083.png?crc=4158004422" alt="" data-heightwidthratio="1.391304347826087" data-image-width="23" data-image-height="32"/>
        </div>
+       <div class="Style-3 rounded-corners grpelem" id="u27085" title="Ethnography"><!-- simple frame --></div>
       </div>
      </div>
      <div class="popup_anchor allow_click_through colelem" data-col-pos="4" id="u26329popup">
