--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=3820244650"/>
   <title>Home</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=261642392"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3955134735"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?crc=3828575570" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/ABOiHqvTGQYq0YWko--T6KV6RVhjn-2bOZAUZIikIW9feTtgfV7JE6bPHQI3wQJhF29tWDJaFRZy5Qg8jcm8jRI3wDZqjQwu5ew3jAFKjcIXZA4ReKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJejAs8deU8JymldhoXShmkScBXOABCiemkdcBXZWw7fbRaPyMMeMI6MKGHf5eqMyMgeMI6MqGIQWmDZZMgCxxgu39.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/7wk1NI8Q3alz6mTchqnaJQ8H46aCwp1Dp_o_UfttKZCfeTtgfVh3D6jPHQID52jawQwDWh93wDgcweBK5Awkw26XFQbU5Q48FQwo5QFqF2sqFcF8eKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJejAs8deU8JymldhoXShmkScBXOABCiemkdcBXZWw7fbRaPyMMeMI6MKGHf5eqMyMgeMI6MqGIQWmDZZMg8wKXhM9.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -53,7 +53,7 @@ $(window).load(function(){
   
   <div class="clearfix borderbox" id="page"><!-- group -->
    <div class="clip_frame clearfix grpelem" id="u18114"><!-- image -->
-    <img class="position_content" id="u18114_img" src="images/asset%20109jarawa-crop-u18114.png?crc=3793361819" alt="" data-heightwidthratio="1.3374358974358975" data-image-width="975" data-image-height="1304"/>
+    <img class="position_content" id="u18114_img" src="images/islandpng-crop-u18114.png?crc=3875017400" alt="" data-heightwidthratio="1.3374358974358975" data-image-width="975" data-image-height="1304"/>
    </div>
    <div class="clearfix grpelem" id="u18093-4" data-sizePolicy="fluidWidth" data-pintopage="page_fixedLeft"><!-- content -->
     <p>JARAWAS</p>
@@ -245,6 +245,6 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4157109226" type="text/javascript" async data-main="scripts/museconfig.js?crc=4153641093" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4157109226" type="text/javascript" async data-main="scripts/museconfig.js?crc=380897831" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
    </body>
 </html>
