--- a/birth.html
+++ b/birth.html
@@ -17,19 +17,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=3820244650"/>
   <title>BIRTH</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=261642392"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=271370390"/>
-  <link rel="stylesheet" type="text/css" href="css/birth.css?crc=191960380" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3955134735"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=99263717"/>
+  <link rel="stylesheet" type="text/css" href="css/birth.css?crc=3913566002" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_birth.css?crc=34192129" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_birth.css?crc=516316170" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
-  <script src="https://use.typekit.net/ik/Nfb3I06izLqzvE5A2sJfm5V8wR532_EvRiKE8ZLU4KtfeC3gfV7JE6bPHQI3wQJhF29tWDJaFRZy5Qg8jcm8jRI3wDZqjQwu5ew3jAFKjcIXZA4ReKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJHjAoTicmkSkuDjkJmdAN0iYF8S14yifuydYs8ScoyiemDJ6ZyZemCde97fbR82UMMeMb6MKGHf5-qMyMgeMb6MKGHf5eqMyMgeMI6MKG4fFJuIMJjMkMfH6qJXD9bMy6FJM4HgIuuShAbMSrf3lSB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/Lr1vDIyXC17e2LsBCeExycU-3C-hHzh3mmyUv9RhfejfeC3gfVh3D6jPHQID52jawQwDWh93wDgcweBK5Awkw26XFQbU5Q48FQwo5QFqF2sqFcF8eKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJHjAoTicmkSkuDjkJejAs8deU8JymldhoXShmkScBXOABCiemkdcBXZWw7fbR82UMMeMb6MKG4fFJuIMIjMkMfH6qJXD9bMs6FJMJ7f6RcTMJbMy6IJMJ7f6RyTMJbMy6gJM4HgIuuShAbM-WOlF6B.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -288,7 +288,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="572" data-content-above-spacer="776" data-content-below-spacer="212" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="572" data-content-above-spacer="776" data-content-below-spacer="211" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="u6323"><!-- group -->
      <a class="nonblock nontext Style clip_frame grpelem" id="u6146" href="index.html" data-sizePolicy="fluidWidthHeight" data-pintopage="page_fixedCenter"><!-- image --><img class="block temp_no_img_src" id="u6146_img" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.775" data-image-width="80" data-image-height="62" src="images/blank.gif?crc=4208392903"/></a>
      <a class="nonblock nontext Style clearfix grpelem" id="u3884-4" href="index.html" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content --><p class="shared_content" data-content-guid="u3884-4_0_content">Return to the island</p></a>
@@ -301,7 +301,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_1024" data-min-width="961" data-max-width="1024"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="clearfix grpelem temp_no_id" data-orig-id="pu3853-4"><!-- group -->
+    <div class="clearfix grpelem" id="pu6323"><!-- group -->
+     <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
+      <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7906976744186046" data-image-width="43" data-image-height="34" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
+      <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
+     </div>
      <div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3853-4"><!-- content -->
       <span class="placeholder" data-placeholder-for="u3853-4_0_content"><!-- placeholder node --></span>
      </div>
@@ -385,10 +389,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="558" data-content-above-spacer="845" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
-     <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
-     <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7906976744186046" data-image-width="43" data-image-height="34" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
-    </div>
     <div class="Style size_fixed grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u21166"><!-- custom html -->
      <span class="placeholder" data-placeholder-for="u21166_0_content"><!-- placeholder node --></span>
     </div>
@@ -396,7 +396,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_960" data-min-width="769" data-max-width="960"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="clearfix grpelem temp_no_id" data-orig-id="pu3853-4"><!-- group -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu6323"><!-- group -->
+     <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
+      <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7560975609756098" data-image-width="41" data-image-height="31" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
+      <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
+     </div>
      <div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3853-4"><!-- content -->
       <span class="placeholder" data-placeholder-for="u3853-4_0_content"><!-- placeholder node --></span>
      </div>
@@ -480,10 +484,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="577" data-content-above-spacer="811" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
-     <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
-     <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7560975609756098" data-image-width="41" data-image-height="31" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
-    </div>
     <div class="Style size_fixed grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u21166"><!-- custom html -->
      <span class="placeholder" data-placeholder-for="u21166_0_content"><!-- placeholder node --></span>
     </div>
@@ -575,7 +575,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="672" data-content-above-spacer="679" data-content-below-spacer="93" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <div class="clearfix grpelem" id="pu6323"><!-- group -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu6323"><!-- group -->
      <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
       <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7796610169491526" data-image-width="59" data-image-height="46" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
       <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
@@ -680,7 +680,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
@@ -711,7 +711,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4157109226" type="text/javascript" async data-main="scripts/museconfig.js?crc=4153641093" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4157109226" type="text/javascript" async data-main="scripts/museconfig.js?crc=380897831" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
   
   <!--HTML Widget code-->
   
