--- a/material-culture.html
+++ b/material-culture.html
@@ -17,9 +17,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=3820244650"/>
   <title>Material culture</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=261642392"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=271370390"/>
-  <link rel="stylesheet" type="text/css" href="css/material-culture.css?crc=204748369" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3955134735"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=99263717"/>
+  <link rel="stylesheet" type="text/css" href="css/material-culture.css?crc=3773160268" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3824530138"/>
@@ -29,7 +29,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
-  <script src="https://use.typekit.net/ik/orqrZQpUtWm38DLm9mkZd2chV0ikd9nkfCw3Xx0Fk9vfeC3gfV7JE6bPHQI3wQJhF29tWDJaFRZy5Qg8jcm8jRI3wDZqjQwu5ew3jAFKjcIXZA4ReKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJHjAoTicmkSkuDjkJmdAN0iYF8S14yifuydYs8ScoyiemDJ6ZyZemCde97fbR82UMMeMb6MKGHf5-qMyMgeMb6MKGHf5eqMyMgeMI6MKG4fFJuIMJjMkMfH6qJXD9bMy6FJM4HgIuuShAbMi7g3lSB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/pw3cfAW5GWhDYEC2JJH-kr_irULoXQWdWR6kb8E8CSMfeC3gfVh3D6jPHQID52jawQwDWh93wDgcweBK5Awkw26XFQbU5Q48FQwo5QFqF2sqFcF8eKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJHjAoTicmkSkuDjkJejAs8deU8JymldhoXShmkScBXOABCiemkdcBXZWw7fbR82UMMeMb6MKG4fFJuIMIjMkMfH6qJXD9bMs6FJMJ7f6RcTMJbMy6IJMJ7f6RyTMJbMy6gJM4HgIuuShAbMpVHlF6B.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -305,7 +305,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_1024" data-min-width="961" data-max-width="1024"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="clearfix grpelem temp_no_id" data-orig-id="pu3853-4"><!-- group -->
+    <div class="clearfix grpelem" id="pu6323"><!-- group -->
+     <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
+      <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7906976744186046" data-image-width="43" data-image-height="34" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
+      <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
+     </div>
      <div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3853-4"><!-- content -->
       <span class="placeholder" data-placeholder-for="u3853-4_0_content"><!-- placeholder node --></span>
      </div>
@@ -390,10 +394,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="935" data-content-above-spacer="935" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
-     <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
-     <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7906976744186046" data-image-width="43" data-image-height="34" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
-    </div>
     <div class="Style size_fixed grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u21166"><!-- custom html -->
      <span class="placeholder" data-placeholder-for="u21166_0_content"><!-- placeholder node --></span>
     </div>
@@ -401,7 +401,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_960" data-min-width="769" data-max-width="960"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="clearfix grpelem temp_no_id" data-orig-id="pu3853-4"><!-- group -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu6323"><!-- group -->
+     <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
+      <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7560975609756098" data-image-width="41" data-image-height="31" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
+      <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
+     </div>
      <div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3853-4"><!-- content -->
       <span class="placeholder" data-placeholder-for="u3853-4_0_content"><!-- placeholder node --></span>
      </div>
@@ -486,10 +490,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="930" data-content-above-spacer="929" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
-     <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
-     <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7560975609756098" data-image-width="41" data-image-height="31" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
-    </div>
     <div class="Style size_fixed grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u21166"><!-- custom html -->
      <span class="placeholder" data-placeholder-for="u21166_0_content"><!-- placeholder node --></span>
     </div>
@@ -582,7 +582,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="930" data-content-above-spacer="929" data-content-below-spacer="93" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <div class="clearfix grpelem" id="pu6323"><!-- group -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu6323"><!-- group -->
      <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
       <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7796610169491526" data-image-width="59" data-image-height="46" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
       <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
@@ -686,7 +686,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
@@ -718,7 +718,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4157109226" type="text/javascript" async data-main="scripts/museconfig.js?crc=4153641093" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4157109226" type="text/javascript" async data-main="scripts/museconfig.js?crc=380897831" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
   
   <!--HTML Widget code-->
   
