--- a/rituals-and-beliefs.html
+++ b/rituals-and-beliefs.html
@@ -17,9 +17,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=3820244650"/>
   <title>Rituals and Beliefs</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=261642392"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=271370390"/>
-  <link rel="stylesheet" type="text/css" href="css/rituals-and-beliefs.css?crc=191015333" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3955134735"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=99263717"/>
+  <link rel="stylesheet" type="text/css" href="css/rituals-and-beliefs.css?crc=4250799836" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3824530138"/>
@@ -29,7 +29,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
-  <script src="https://use.typekit.net/ik/pMfmEw56LICSVS7DO-8jTNq9HqDVqSnuROGW6-ZNCsXfeC3gfV7JE6bPHQI3wQJhF29tWDJaFRZy5Qg8jcm8jRI3wDZqjQwu5ew3jAFKjcIXZA4ReKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJHjAoTicmkSkuDjkJmdAN0iYF8S14yifuydYs8ScoyiemDJ6ZyZemCde97fbR82UMMeMb6MKGHf5-qMyMgeMb6MKGHf5eqMyMgeMI6MKG4fFJuIMJjMkMfH6qJXD9bMy6FJM4HgIuuShAbM-HM3lSB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/MMjvGCj_BRZaRdDvL6O3kTs0YIJduRSWMvm-QSbZKvMfeC3gfVh3D6jPHQID52jawQwDWh93wDgcweBK5Awkw26XFQbU5Q48FQwo5QFqF2sqFcF8eKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJHjAoTicmkSkuDjkJejAs8deU8JymldhoXShmkScBXOABCiemkdcBXZWw7fbR82UMMeMb6MKG4fFJuIMIjMkMfH6qJXD9bMs6FJMJ7f6RcTMJbMy6IJMJ7f6RyTMJbMy6gJM4HgIuuShAbMja4lF6B.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -306,13 +306,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_1024" data-min-width="961" data-max-width="1024"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="clearfix grpelem temp_no_id" data-orig-id="pu3853-4"><!-- group -->
+    <div class="clearfix grpelem" id="pu6323"><!-- group -->
+     <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
+      <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7906976744186046" data-image-width="43" data-image-height="34" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
+      <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
+     </div>
      <div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3853-4"><!-- content -->
       <span class="placeholder" data-placeholder-for="u3853-4_0_content"><!-- placeholder node --></span>
      </div>
      <span class="clearfix grpelem placeholder" data-placeholder-for="u17240-4_content"><!-- placeholder node --></span>
      <div class="clip_frame grpelem temp_no_id" data-orig-id="u17250"><!-- image -->
-      <img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%2030jarawa-crop-u17250.png?crc=3902089263" alt="" data-heightwidthratio="0.5594758064516129" data-image-width="992" data-image-height="555" data-orig-id="u17250_img" src="images/blank.gif?crc=4208392903"/>
+      <img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%2030jarawa-crop-u17250.png?crc=56936190" alt="" data-heightwidthratio="0.5594758064516129" data-image-width="992" data-image-height="555" data-orig-id="u17250_img" src="images/blank.gif?crc=4208392903"/>
      </div>
      <span class="clearfix grpelem placeholder" data-placeholder-for="u21554-20_content"><!-- placeholder node --></span>
      <span class="clearfix grpelem placeholder" data-placeholder-for="u21562-4_content"><!-- placeholder node --></span>
@@ -392,10 +396,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer shared_content" data-offset-top="899" data-content-above-spacer="899" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
-    <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
-     <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
-     <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7906976744186046" data-image-width="43" data-image-height="34" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
-    </div>
     <div class="Style size_fixed grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u21166"><!-- custom html -->
      <span class="placeholder" data-placeholder-for="u21166_0_content"><!-- placeholder node --></span>
     </div>
@@ -403,13 +403,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_960" data-min-width="769" data-max-width="960"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="clearfix grpelem temp_no_id" data-orig-id="pu3853-4"><!-- group -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu6323"><!-- group -->
+     <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
+      <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7560975609756098" data-image-width="41" data-image-height="31" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
+      <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
+     </div>
      <div class="clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3853-4"><!-- content -->
       <span class="placeholder" data-placeholder-for="u3853-4_0_content"><!-- placeholder node --></span>
      </div>
      <span class="clearfix grpelem placeholder" data-placeholder-for="u17240-4_content"><!-- placeholder node --></span>
      <div class="clip_frame grpelem temp_no_id" data-orig-id="u17250"><!-- image -->
-      <img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%2030jarawa-crop-u172502.png?crc=360072818" alt="" data-heightwidthratio="0.5591397849462365" data-image-width="930" data-image-height="520" data-orig-id="u17250_img" src="images/blank.gif?crc=4208392903"/>
+      <img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%2030jarawa-crop-u172502.png?crc=62373028" alt="" data-heightwidthratio="0.5591397849462365" data-image-width="930" data-image-height="520" data-orig-id="u17250_img" src="images/blank.gif?crc=4208392903"/>
      </div>
      <span class="clearfix grpelem placeholder" data-placeholder-for="u21554-20_content"><!-- placeholder node --></span>
      <span class="clearfix grpelem placeholder" data-placeholder-for="u21562-4_content"><!-- placeholder node --></span>
@@ -489,10 +493,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
-    <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
-     <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
-     <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7560975609756098" data-image-width="41" data-image-height="31" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
-    </div>
     <div class="Style size_fixed grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u21166"><!-- custom html -->
      <span class="placeholder" data-placeholder-for="u21166_0_content"><!-- placeholder node --></span>
     </div>
@@ -586,7 +586,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="verticalspacer" data-offset-top="899" data-content-above-spacer="899" data-content-below-spacer="93" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-    <div class="clearfix grpelem" id="pu6323"><!-- group -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu6323"><!-- group -->
      <div class="clearfix grpelem temp_no_id" data-orig-id="u6323"><!-- group -->
       <a class="nonblock nontext Style clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u6146"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/asset%208symbol.png?crc=4190849312" alt="" data-heightwidthratio="0.7796610169491526" data-image-width="59" data-image-height="46" data-orig-id="u6146_img" src="images/blank.gif?crc=4208392903"/></a>
       <a class="nonblock nontext Style clearfix grpelem temp_no_id" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u3884-4"><!-- content --><span class="placeholder" data-placeholder-for="u3884-4_0_content"><!-- placeholder node --></span></a>
@@ -691,7 +691,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
@@ -723,7 +723,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4157109226" type="text/javascript" async data-main="scripts/museconfig.js?crc=4153641093" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4157109226" type="text/javascript" async data-main="scripts/museconfig.js?crc=380897831" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
   
   <!--HTML Widget code-->
   
