--- a/social-structure.html
+++ b/social-structure.html
@@ -17,9 +17,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=3820244650"/>
   <title>Social Structure</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=261642392"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=271370390"/>
-  <link rel="stylesheet" type="text/css" href="css/social-structure.css?crc=296041482" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3955134735"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=99263717"/>
+  <link rel="stylesheet" type="text/css" href="css/social-structure.css?crc=251285555" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3824530138"/>
@@ -29,7 +29,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
   <![endif]-->
-  <script src="https://use.typekit.net/ik/xIaRWbx8kc59E3JxpmaNpJsK6Sa0Yg-RRaH2pLi57gMfeCIgfV7JE6bPHQI3wQJhF29tWDJaFRZy5Qg8jcm8jRI3wDZqjQwu5ew3jAFKjcIXZA4ReKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJHjAoTicmkSkuDjkJmdAN0iYF8S14yifuydYs8ScoyiemDJ6ZyZemCde97fbR82UMMeMb6MKGHf5-qMyMgeMb6MKGHf5eqMyMgeMI6MKG4fFJuIMJjMkMfP6sFiWF8qMeExvYWgb.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/-hF5fwGYCq2w9d4N0F-Not7r6BV_c396GSs4tr1t9OtfeCIgfVh3D6jPHQID52jawQwDWh93wDgcweBK5Awkw26XFQbU5Q48FQwo5QFqF2sqFcF8eKq7OcTyScBajWw0ZAsuOeTyScBajWw0ZAsuOYiaiko7jW4yihBDOcmqiPJHjAoTicmkSkuDjkJejAs8deU8JymldhoXShmkScBXOABCiemkdcBXZWw7fbR82UMMeMb6MKG4fFJuIMIjMkMfH6GJo7bfIMJjgfMfH6GJt-bfIMJjMPMfP6sFiWF8qMeakOQjgb.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -198,7 +198,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="position_content temp_no_img_src" id="u21981_img" data-orig-src="images/asset%2071jarawa.png?crc=4124212658" alt="" width="1420" height="833" src="images/blank.gif?crc=4208392903"/>
      </div>
      <div class="clearfix grpelem" id="u17028-4"><!-- content -->
-      <p class="shared_content" data-content-guid="u17028-4_0_content"><span class="title">social structure</span></p>
+      <p class="shared_content" data-content-guid="u17028-4_0_content"><span class="title">Social Structure</span></p>
      </div>
      <div class="clearfix grpelem" id="u21705-21"><!-- content -->
       <p id="u21705-2" class="shared_content" data-content-guid="u21705-2_content"><span class="body-text" id="u21705">The word tribe is used to group people with identical socio-cultural and physical characters and who have a common territory, language, customs and rights over natural resources. The Jarawa tribe has divided their territory into three broad divisions- the southern “Boiab” region, the middle “Thidong” region and the Northern “Tanmad” region.</span></p>
@@ -429,7 +429,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
@@ -462,7 +462,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4157109226" type="text/javascript" async data-main="scripts/museconfig.js?crc=4153641093" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4157109226" type="text/javascript" async data-main="scripts/museconfig.js?crc=380897831" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
   
   <!--HTML Widget code-->
   
